# schafkopf-model

./: .gitignore  LICENSE  README.md  cli_game.py  pyproject.toml
.github/workflows/: run_pytests.yaml
src/environment/: card.py  deck.py  game.py  game_exception.py  game_exceptions.py  game_modes.py  game_modes_spec.py  game_rules.py  game_spec.py
